fix lint, format

--- a/src/pages/assignments/[id]/index.astro
+++ b/src/pages/assignments/[id]/index.astro
@@ -16,9 +16,9 @@ const assignment1 = await db.attachment.findUnique({
     class: {
       include: {
         course: {
-          include:{
-            classes:true
-          }
+          include: {
+            classes: true,
+          },
         },
       },
     },
