--- a/src/pages/cp/index.astro
+++ b/src/pages/cp/index.astro
@@ -1,5 +1,5 @@
 ---
-import RootLayout from "@/layouts/RootLayout.astro"
+import RootLayout from "@/layouts/RootLayout.astro";
 
 const handles = {
   codechef: "",
@@ -7,7 +7,7 @@ const handles = {
   codeforces: "",
   hackerrank: "",
   interviewbit: "",
-}
+};
 
 import { getPlatformScores, validatePlatformHandles } from "@/coding-platforms";
 
@@ -16,7 +16,7 @@ const scores = await getPlatformScores(handles);
 ---
 
 <RootLayout title="Coding Platforms">
-  <div class="flex flex-col items-center justify-center h-screen">  
+  <div class="flex flex-col items-center justify-center h-screen">
     <h1 class="text-2xl font-bold">Validation Result</h1>
     <pre>{JSON.stringify(validationResult, null, 2)}</pre>
     <h1 class="text-2xl font-bold">Scores</h1>
