--- a/src/pages/instructor/drive/index.astro
+++ b/src/pages/instructor/drive/index.astro
@@ -1,17 +1,17 @@
 ---
 import RootLayout from "@/layouts/RootLayout.astro";
-import db from "@/lib/db"
-import Drive from "./_components/Drive.tsx"
-const user = Astro.locals.user
+import db from "@/lib/db";
+import Drive from "./_components/Drive.tsx";
+const user = Astro.locals.user;
 const uploadedFiles = await db.file.findMany({
   where: {
     uploadedById: user?.id!,
-    isArchived: false
+    isArchived: false,
   },
   orderBy: {
-    createdAt: "desc"
-  }
-})
+    createdAt: "desc",
+  },
+});
 ---
 
 <RootLayout title="Drive">
