--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -1,22 +1,20 @@
 ---
 import "@/styles/globals.css";
 import { ViewTransitions } from "astro:transitions";
-import { Sidebar } from "./Sidebar.tsx";
+import { AppSidebar } from "@/components/sidebar/AppSidebar";
+import { AppHeader } from "@/components/sidebar/AppHeader";
 import { Toaster } from "react-hot-toast";
 import { Toaster as SonnerToaster } from "@/components/ui/sonner"
-import { SidebarItem } from "@/components/Sidebar";
 
 interface Props {
   title?: string;
-  sideBarItems?: SidebarItem[];
-  isSidebarOpen?: boolean;
+  forceClose?: boolean;
 }
 
-const { title = "Tutly" } = Astro.props;
-const { sideBarItems, isSidebarOpen } = Astro.props;
+const { title = "Tutly", forceClose = false } = Astro.props;
 
 const pathname = Astro.url.pathname;
-const user = Astro.locals.user;
+const user = Astro.locals.user!;
 
 // @ts-ignore
 globalThis.pathname = pathname;
@@ -52,17 +50,19 @@ globalThis.pathname = pathname;
     </div>
     <Toaster client:load />
     {user && (
-        <Sidebar
-          client:load
-          pathname={pathname}
-          user={user}
-          sideBarItems={sideBarItems ?? []}
-          isSidebarOpen={isSidebarOpen!}
-        >
-          <slot />
-        </Sidebar>
-      )}
-    <SonnerToaster client:load  />
+      <div class="flex min-h-screen">
+        <div class="relative">
+          <AppSidebar client:load user={user} pathname={pathname} forceClose={forceClose} />
+        </div>
+        <main class="w-full">
+          <AppHeader client:load user={user} pathname={pathname} />
+          <div class="p-4">
+            <slot />
+          </div>
+        </main>
+      </div>
+    )}
+    <SonnerToaster client:load />
   </body>
 </html>
 
