--- a/src/pages/statistics/[id].astro
+++ b/src/pages/statistics/[id].astro
@@ -6,7 +6,7 @@ import { FaRankingStar } from "react-icons/fa6";
 import { StudentBarchart } from "@/components/charts/studentBarchart";
 import CalendarHeatmap from "./_components/heatmap";
 
-const courseId = Astro.params.id;
+const courseId = Astro.params.id!;
 const { data } = await actions.courses_getAllCourses();
 const { data: studentData } = await actions.statistics_studentBarchartData({ courseId });
 const { data: attendanceData } = await actions.statistics_studentHeatmapData({ courseId });
@@ -16,7 +16,7 @@ const attendancePercentage = (
   attendanceData?.classes.length
 ).toFixed(2);
 
-function isDateInCurrentWeek(dateString) {
+function isDateInCurrentWeek(dateString: string) {
   const inputDate = new Date(dateString);
   const today = new Date();
   const startOfWeek = new Date(today);
@@ -26,10 +26,10 @@ function isDateInCurrentWeek(dateString) {
   return inputDate >= startOfWeek && inputDate <= endOfWeek;
 }
 
-const thisWeekAttended = attendanceData?.attendanceDates.filter((date) =>
+const thisWeekAttended = attendanceData?.attendanceDates.filter((date: any) =>
   isDateInCurrentWeek(date)
 ).length;
-const thisWeekClasses = attendanceData?.classes.filter((date) => isDateInCurrentWeek(date)).length;
+const thisWeekClasses = attendanceData?.classes.filter((date: any) => isDateInCurrentWeek(date)).length;
 const thisWeekPercentage = ((thisWeekAttended * 100) / thisWeekClasses).toFixed(2);
 const uptoLastWeek = (
   ((attendanceData?.attendanceDates.length - thisWeekAttended) * 100) /
@@ -56,7 +56,7 @@ const uptoLastWeek = (
         <Radialchart
           client:load
           data={attendancePercentage}
-          thisWeek={uptoLastWeek - thisWeekPercentage}
+          thisWeek={Number(uptoLastWeek) - Number(thisWeekPercentage)}
         />
       </div>
       <div
@@ -75,17 +75,17 @@ const uptoLastWeek = (
           <div class="relative rounded-xl border p-4">
             <h1 class="absolute -top-3 bg-background px-1 text-sm">Score</h1>
             <h1 class="text-3xl font-bold text-primary-500 md:text-4xl">
-              {studentData.totalPoints}
+              {studentData?.totalPoints}
             </h1>
             <h1 class="text-xs text-gray-500 md:text-sm">
-              / {studentData.evaluated} assignments{" "}
+              / {studentData?.evaluated} assignments{" "}
             </h1>
           </div>
         </div>
         <div class="md:w-2/3">
           <StudentBarchart
             client:load
-            data={[studentData.evaluated, studentData.unreviewed, studentData.unsubmitted]}
+            data={[studentData?.evaluated, studentData?.unreviewed, studentData?.unsubmitted]}
           />
           <!-- <pre>{JSON.stringify(studentData, null, 2)}</pre> -->
         </div>
