--- a/src/pages/schedule/index.astro
+++ b/src/pages/schedule/index.astro
@@ -19,14 +19,14 @@ const [events, courses] = await Promise.all([
       AND: [
         {
           startTime: {
-            gte: date
-          }
+            gte: date,
+          },
         },
         {
           startTime: {
-            lt: new Date(date.getTime() + 24 * 60 * 60 * 1000)
-          }
-        }
+            lt: new Date(date.getTime() + 24 * 60 * 60 * 1000),
+          },
+        },
       ],
       course: {
         enrolledUsers: {
@@ -61,13 +61,17 @@ const [events, courses] = await Promise.all([
   }),
 ]);
 
-const eventsWithAccess = events.map(event => ({
+const eventsWithAccess = events.map((event) => ({
   ...event,
-  haveAdminAccess
+  haveAdminAccess,
 }));
 ---
 
 <RootLayout title="Schedule">
-  <ScheduleLayout client:load initialEvents={eventsWithAccess} courses={courses} haveAdminAccess={haveAdminAccess} />
+  <ScheduleLayout
+    client:load
+    initialEvents={eventsWithAccess}
+    courses={courses}
+    haveAdminAccess={haveAdminAccess}
+  />
 </RootLayout>
-
