--- a/src/pages/cp/index.astro
+++ b/src/pages/cp/index.astro
@@ -8,7 +8,8 @@ const profile = await db.profile.findUnique({
   },
 });
 
-const { codechef, leetcode, codeforces, hackerrank, interviewbit } = profile?.professionalProfiles as Record<string, string> || {};
+const { codechef, leetcode, codeforces, hackerrank, interviewbit } =
+  (profile?.professionalProfiles as Record<string, string>) || {};
 
 const handles = {
   codechef,
