--- a/src/pages/courses/[id]/index.astro
+++ b/src/pages/courses/[id]/index.astro
@@ -3,7 +3,8 @@ import RootLayout from "@/layouts/RootLayout.astro";
 import db from "@/lib/db";
 import { FaExternalLinkAlt } from "react-icons/fa";
 import ClassSidebar from "./classes/_components/classSidebar";
-import MarkdownPreview from "@/components/MarkdownPreview";
+// import MarkdownPreview from "@/components/MarkdownPreview";
+// import { marked } from "marked";
 
 const currentUser = Astro.locals.user;
 if (!currentUser) return null;
@@ -52,15 +53,16 @@ for (const classItem of classes) {
   });
 }
 
-const maxWords = 50;
-function truncateText(text: string) {
-  const words = text.split(/\s+/);
-  if (words.length <= maxWords) {
-    return text;
-  }
-  const truncatedText = words.slice(0, maxWords).join(" ");
-  return truncatedText + "...";
-}
+// const maxWords = 10;
+
+// function truncateText(text: string) {
+//   const words = text.split(/\s+/);
+//   if (words.length <= maxWords) {
+//     return text;
+//   }
+//   const truncatedText = words.slice(0, maxWords).join(" ");
+//   return truncatedText + "...";
+// }
 
 const classesWithFolders = await db.class.findMany({
   where: {
@@ -129,7 +131,7 @@ const classesWithFolders = await db.class.findMany({
                     </div>
                   </div>
                   <p class="mb-2 mt-2 text-sm font-semibold text-gray-500/85 dark:text-gray-400">
-                    <MarkdownPreview
+                    {/* <MarkdownPreview
                       client:only
                       className="text-xs font-thin"
                       content={truncateText(
@@ -137,7 +139,7 @@ const classesWithFolders = await db.class.findMany({
                           ? attachment?.details.slice(0, 300) + "..."
                           : "No Description"
                       )}
-                    />
+                    /> */}
                   </p>
                   {attachment?.link && (
                     <div class="flex items-center justify-start space-x-2 text-sm hover:opacity-90">
