--- a/src/pages/instructor/report/[courseId]/index.astro
+++ b/src/pages/instructor/report/[courseId]/index.astro
@@ -23,5 +23,6 @@ const courses = coursesData?.data;
     intitialdata={sortedData as DataItem[]}
     allCourses={courses as Course[]}
     courseId={courseId}
+    client:load
   />
 </RootLayout>
