--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -52,7 +52,7 @@ globalThis.pathname = pathname;
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <script>
+    <!-- <script>
       if (
         /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) &&
         !window.matchMedia("(display-mode: standalone)").matches &&
@@ -69,7 +69,7 @@ globalThis.pathname = pathname;
           window.location.href = "/";
         }
       }
-    </script>
+    </script> -->
   </head>
   <body>
     <div class="loader" transition:persist="loader">
