--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -5,7 +5,6 @@ import { AppSidebar } from "@/components/sidebar/AppSidebar";
 import { AppHeader } from "@/components/sidebar/AppHeader";
 import { Toaster } from "react-hot-toast";
 import { Toaster as SonnerToaster } from "@/components/ui/sonner";
-import CrispChatIntegration from "@/components/crisp";
 import { Toaster as ShadcnToaster } from "@/components/ui/toaster";
 
 interface Props {
@@ -17,6 +16,7 @@ const { title = "Tutly", forceClose = false } = Astro.props;
 
 const pathname = Astro.url.pathname;
 const user = Astro.locals.user!;
+const organization = Astro.locals.organization!;
 
 // @ts-ignore
 globalThis.pathname = pathname;
@@ -52,24 +52,28 @@ globalThis.pathname = pathname;
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <!-- <script>
-      if (
-        /Android|iPhone|iPad|iPod/i.test(navigator.userAgent) &&
-        !window.matchMedia("(display-mode: standalone)").matches &&
-        !window.location.pathname.includes("/auth")
-      ) {
-        const currentUrl = window.location.href;
+    <script is:inline define:vars={{ user, organization }}>
+      window.$crisp=[];
+      window.CRISP_WEBSITE_ID="b1db5fec-2104-4c63-a771-59dcdcd17215";
+      (function(){
+        d=document;
+        s=d.createElement("script");
+        s.src="https://client.crisp.chat/l.js";
+        s.async=1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
 
-        if (
-          confirm(
-            "For the best experience, please use our mobile app. Would you like to install it now?"
-          )
-        ) {
-          localStorage.setItem("redirectAfterInstall", currentUrl);
-          window.location.href = "/";
-        }
+      if (user) {
+        window.$crisp.push(["set", "user:email", user.email]);
+        window.$crisp.push(["set", "user:nickname", user.name]);
+        window.$crisp.push(["set", "user:avatar", user.image]);
+        window.$crisp.push(["set", "user:role", user.role]);
+        window.$crisp.push(["set", "user:id", user.id]);
+        window.$crisp.push(["set", "user:username", user.username]);
+        window.$crisp.push(["set", "user:mobile", user.mobile]);
+        window.$crisp.push(["set", "user:organization", organization.orgCode]);
       }
-    </script> -->
+    </script>
   </head>
   <body>
     <div class="loader" transition:persist="loader">
@@ -77,7 +81,6 @@ globalThis.pathname = pathname;
       <div class="loader-shimmer"></div>
     </div>
     <Toaster client:load />
-    <CrispChatIntegration client:load />
     {
       user && (
         <div class="flex min-h-screen">
