--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -6,6 +6,7 @@ import { AppHeader } from "@/components/sidebar/AppHeader";
 import { Toaster } from "react-hot-toast";
 import { Toaster as SonnerToaster } from "@/components/ui/sonner";
 import { Toaster as ShadcnToaster } from "@/components/ui/toaster";
+import { Crisp } from "@/components/Crisp";
 
 interface Props {
   title?: string;
@@ -52,28 +53,6 @@ globalThis.pathname = pathname;
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <script is:inline define:vars={{ user, organization }}>
-      window.$crisp=[];
-      window.CRISP_WEBSITE_ID="b1db5fec-2104-4c63-a771-59dcdcd17215";
-      (function(){
-        d=document;
-        s=d.createElement("script");
-        s.src="https://client.crisp.chat/l.js";
-        s.async=1;
-        d.getElementsByTagName("head")[0].appendChild(s);
-      })();
-
-      if (user) {
-        window.$crisp.push(["set", "user:email", user.email]);
-        window.$crisp.push(["set", "user:nickname", user.name]);
-        window.$crisp.push(["set", "user:avatar", user.image]);
-        window.$crisp.push(["set", "user:role", user.role]);
-        window.$crisp.push(["set", "user:id", user.id]);
-        window.$crisp.push(["set", "user:username", user.username]);
-        window.$crisp.push(["set", "user:mobile", user.mobile]);
-        window.$crisp.push(["set", "user:organization", organization.orgCode]);
-      }
-    </script>
   </head>
   <body>
     <div class="loader" transition:persist="loader">
@@ -98,6 +77,7 @@ globalThis.pathname = pathname;
     }
     <SonnerToaster client:load />
     <ShadcnToaster client:load />
+    <Crisp client:only user={user} organization={organization} />
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", async () => {
